<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tIFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d30dp"
            android:background="@color/activity_background">

            <AutoCompleteTextView
                android:id="@+id/acFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="textPersonName"
                android:maxLines="1"
                style="@style/Base.V7.Widget.AppCompat.EditText"
                android:hint="@string/enter_first_name"
                android:imeOptions="actionNext"
                android:minHeight="?android:attr/listPreferredItemHeightSmall" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d16dp"
            android:background="@color/activity_background">

            <AutoCompleteTextView
                android:id="@+id/acLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="textPersonName"
                android:maxLines="1"
                style="@style/Base.V7.Widget.AppCompat.EditText"
                android:hint="@string/enter_last_name"
                android:imeOptions="actionNext"
                android:minHeight="?android:attr/listPreferredItemHeightSmall" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d16dp"
            android:background="@color/activity_background">

            <EditText
                android:id="@+id/etBabyFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILAadhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d16dp"
            android:background="@color/activity_background">

            <EditText
                android:id="@+id/etAadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_aadhar"
                android:inputType="number"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d16dp"
            android:background="@color/activity_background">

            <EditText
                android:id="@+id/acAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:lines="5"
                android:maxLines="6"
                android:maxLength="200"
                android:inputType="textMultiLine"
                android:hint="@string/enter_address"
                android:imeOptions="actionNext"
              />
        </android.support.design.widget.TextInputLayout>



    </LinearLayout>



</ScrollView>