<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d100dp"
            android:background="@color/activity_background">

            <AutoCompleteTextView
                android:id="@+id/acUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="textPersonName"
                android:maxLines="1"
                style="@style/Base.V7.Widget.AppCompat.EditText"
                android:hint="@string/enter_user_name"
                android:imeOptions="actionNext"
                android:minHeight="?android:attr/listPreferredItemHeightSmall" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
           android:layout_marginTop="@dimen/d16dp"
            android:background="@color/activity_background">

            <AutoCompleteTextView
                android:id="@+id/acEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                style="@style/Base.V7.Widget.AppCompat.EditText"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:minHeight="?android:attr/listPreferredItemHeightSmall" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d16dp"
            android:background="@color/activity_background">

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d16dp"
            android:layout_marginBottom="@dimen/d16dp"
            android:background="@color/activity_background">

            <EditText
                android:id="@+id/etCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>